--- a/japrost-qa/pom.xml
+++ b/japrost-qa/pom.xml
@@ -7,12 +7,14 @@
   <parent>
     <groupId>de.japrost</groupId>
     <artifactId>japrost-parent</artifactId>
-    <version>5-SNAPSHOT</version>
+    <version>5.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>japrost-qa</artifactId>
   <version>1.0-SNAPSHOT</version>
+  
   <name>JaProSt QA Resouces</name>
+  <url>http://www.japrost.de/japrost-qa/</url>
 
   <properties>
     <japrost.site.locales>de</japrost.site.locales>
@@ -81,4 +83,11 @@
       </plugin>
     </plugins>
   </reporting>
+  <distributionManagement>
+    <site>
+      <id>japrostSiteId</id>
+      <name>JaProSt-Site</name>
+      <url>${japrost.distribution.site.url}/japrost-qa/</url>
+    </site>
+  </distributionManagement>  
 </project>
