--- a/japrost-qa/pom.xml
+++ b/japrost-qa/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>japrost-qa</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>JaProSt QA Resouces</name>
@@ -90,6 +90,6 @@
   <scm>
     <developerConnection>scm:git:git://bitbucket.org/daprost/japrost-qa</developerConnection>
     <url>https://bitbucket.org/daprost/japrost-qa</url>
-    <tag>japrost-qa-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
